# Sea_Fight

./: Makefile  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
header/: check_data.h  client.h  common.h  gen_ships.h  graphics.h  gtk_graphics.h  net.h  server.h
src/: Makefile  Makefile.in  check_data.c  client  client.c  gen_ships.c  graphics.c  gtk_graphics.c  server.c
src/client/: Makefile  Makefile.am  Makefile.in  client  client.c  graphics.c
src/client/.deps/: client.Po  graphics.Po
src/server/: Makefile  Makefile.am  Makefile.in  check_data.c  gen_ships.c  server  server.c
src/server/.deps/: check_data.Po  gen_ships.Po  server.Po
